Big load of changes
- Added callback functionality for taskmanager tasks. You can launch
  a task and define a callback function to be run when the task finished.
  This requires activating the cronjob
- Added cron functionality: Add cronjob that calls the cron api every 5
  minutes to use it. (See cron.inc.php)
- Added eventlog
- Added missing translations
- Merged main-menu-login and main-menu-logout

--- a/lang/de/settings/cat_setting.json
+++ b/lang/de/settings/cat_setting.json
@@ -3,5 +3,6 @@
     "cat_1": "Inaktivit\u00e4t und Abschaltung",
     "cat_2": "Internetzugriff",
     "cat_3": "Zeitsynchronisation",
-    "cat_4": "Grundsystem"
+    "cat_4": "Grundsystem",
+    "cat_5": "Gemeinsames Netzlaufwerk"
 }
