--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -14,9 +14,12 @@
     "error-read": "Error reading {{0}}",
     "error-rename": "Could not rename {{0}} into {{1}}",
     "error-write": "Failed to write {{0}}",
+    "i18n-empty-tag": "A string without tag was submitted",
+    "i18n-invalid-lang": "Invalid language: {{0}}",
     "invalid-action": "Invalid action: {{0}}",
     "invalid-file": "The file {{0}} does not exist!",
     "invalid-ip": "No interface is configured with the address {{0}}",
+    "invalid-path": "Invalid path.",
     "invalid-template": "Selected template is not valid",
     "loginfail": "Username or Password incorrect",
     "missing-file": "There was no file selected!",
@@ -36,6 +39,8 @@
     "taskmanager-error": "Failed to connect to the Task Manager",
     "taskmanager-format": "Task Manager has returned invalid data",
     "token": "Invalid token. CSRF attack?",
+    "unsuccessful-action": "Not successful",
+    "updated-tags": "Tags have been updated",
     "upload-complete": "Upload of {{0}} was successful",
     "upload-failed": "Upload failed: {{0}}",
     "value-invalid": "The value {{1}} is invalid for option {{0}} and has been ignored"
