--- a/lang/en/templates/sysconfig/_page.json
+++ b/lang/en/templates/sysconfig/_page.json
@@ -1,6 +1,6 @@
 {
     "lang_activate": "Activate",
-    "lang_active": "",
+    "lang_active": "Active",
     "lang_availableModules": "Available Configuration Modules",
     "lang_availableSystem": "Available System Configuration",
     "lang_close": "Close",
