--- a/lang/en/templates/translation/edit.json
+++ b/lang/en/templates/translation/edit.json
@@ -7,6 +7,6 @@
     "lang_newTAG": "New TAG",
     "lang_portugueseTAG": "Portuguese TAG",
     "lang_save": "Save",
-    "lang_templateAdminHelp": "",
+    "lang_templateAdminHelp": "Here you can translate and edit phrases and texts.",
     "lang_templateHint": "Hint: Yellow lines indicate a translation is missing and red lines indicate a tag is not being used by the template."
 }
