--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -14,11 +14,12 @@
     "error-read": "Fehler beim Lesen von {{0}}",
     "error-rename": "Konnte {{0}} nicht in {{1}} umbenennen",
     "error-write": "Fehler beim Schreiben von {{0}}",
-    "i18n-empty-tag": "Ein String wurde ohne Tag \u00fcbermittelt.",
+    "i18n-empty-tag": "Ein String wurde ohne Tag \u00fcbermittelt",
     "i18n-invalid-lang": "Ung\u00fcltige Sprache: {{0}}",
     "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
     "invalid-file": "Die Datei {{0}} existiert nicht!",
     "invalid-ip": "Kein Interface ist auf die Adresse {{0}} konfiguriert",
+    "invalid-path": "Ung\u00fcltiger Pfad.",
     "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
     "loginfail": "Benutzername oder Kennwort falsch",
     "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
