--- a/lang/de/templates/translation/edit.json
+++ b/lang/de/templates/translation/edit.json
@@ -7,6 +7,6 @@
     "lang_newTAG": "Neue Tag",
     "lang_portugueseTAG": "Portugiesisch TAG",
     "lang_save": "Speichern",
-    "lang_templateAdminHelp": "",
+    "lang_templateAdminHelp": "Hier k\u00f6nnen Sie die verwendeten Texte und S\u00e4tze \u00fcbersetzen.",
     "lang_templateHint": "Hinweis: Gelbe Linie zeigt eine \u00dcbersetzung fehlt und roten Linien zeigen ein Tag wird nicht von das Template verwendet."
 }
