--- a/lang/en/settings/setting.json
+++ b/lang/en/settings/setting.json
@@ -1,16 +1,18 @@
 {
     "SLX_ADDONS": "To load addons. There currently only vmware is available.",
-    "SLX_BIOS_CLOCK": "Specifies whether and how the internal clock of the computer should be set in relation to the system time of the \/MiniLinux\/.\n*off* = The internal clock of the computer is not changed.\n*local* = The internal clock is set to local time. Preferably if, for example, there is still a native Windows installation available on the PC.\n*utc* = The internal clock is set to the \/Coordinated Universal Time\/. This is the most common setup in a pure Linux environment.",
-    "SLX_LOGOUT_TIMEOUT": "Time \/in seconds\/, in which a user session may remain without action before it is terminated.\nLeave field blank to disable the function.",
+    "SLX_BIOS_CLOCK": "Specifies whether and how the internal clock of the computer should be set in relation to the system time of the \/MiniLinux\/.*off* = The internal clock of the computer is not changed.*local* = The internal clock is set to local time. Preferably if, for example, there is still a native Windows installation available on the PC.*utc* = The internal clock is set to the \/Coordinated Universal Time\/. This is the most common setup in a pure Linux environment.",
+    "SLX_COMMON_SHARE_AUTH": "Athentication method for the common network share. *guest* means no authentication (public share), *user* means the user's credentials will be used.",
+    "SLX_COMMON_SHARE_PATH": "Path of network share. Supported are NFS (no authentication only) and CIFS\/SMB (with and without authentication).",
+    "SLX_LOGOUT_TIMEOUT": "Time \/in seconds\/, in which a user session may remain without action before it is terminated.Leave field blank to disable the function.",
     "SLX_NET_DOMAIN": "DNS domain in which the client integrate, provided the DHCP server does not specifies such.",
-    "SLX_NTP_SERVER": "Address of the NTP time server. Multiple servers can be specified separated by spaces.\nThe servers are queried in sequence until a responding server is found.",
+    "SLX_NTP_SERVER": "Address of the NTP time server. Multiple servers can be specified separated by spaces.The servers are queried in sequence until a responding server is found.",
     "SLX_PROXY_BLACKLIST": "Address or addresses ranges in which the proxy server is not used (for example the address range of the device). Valid entries are individual IP addresses and IP ranges in CIDR notation (for example 1.2.0.0\/16). Multiple selections can be separated by spaces.",
     "SLX_PROXY_IP": "The address to use for the proxy server.",
-    "SLX_PROXY_MODE": "Determines whether a proxy server is required to access the Internet.\n*off* = do not use a Proxy.\n*on* = Always use proxy.\n*auto* = Only use proxy when the client PC is in a private address space.",
+    "SLX_PROXY_MODE": "Determines whether a proxy server is required to access the Internet.*off* = do not use a Proxy.*on* = Always use proxy.*auto* = Only use proxy when the client PC is in a private address space.",
     "SLX_PROXY_PORT": "The port to use for the proxy server.",
-    "SLX_PROXY_TYPE": "Type of the proxy.\n*socks4*, *socks5*,\n*http-connect* (HTTP proxy with support from the CONNECT method),\n*http-relay* (Classic HTTP proxy)",
-    "SLX_REMOTE_LOG_SESSIONS": "Determines whether logins and logouts of the users should be reported to the satellite.\n*yes* = login with user ID\n*anonymous* = anonymous login\n*no* = no login",
-    "SLX_ROOT_PASS": "The root password of the basic system. Only required for diagnostic purposes on the client.\nLeave field blank to disallow root logins.\n\/Hint\/: The password is encrypted with $6$ hash, so it is no longer readable after saving!",
-    "SLX_SHUTDOWN_SCHEDULE": "Fixed time to turn off the computer, even if there is a user active.\nSeveral times can be specified, separated by spaces.",
-    "SLX_SHUTDOWN_TIMEOUT": "Time in seconds after which a computer is switched off, if no user is logged on.\nLeave blank to disable the function."
+    "SLX_PROXY_TYPE": "Type of the proxy.*socks4*, *socks5*,*http-connect* (HTTP proxy with support from the CONNECT method),*http-relay* (Classic HTTP proxy)",
+    "SLX_REMOTE_LOG_SESSIONS": "Determines whether logins and logouts of the users should be reported to the satellite.*yes* = login with user ID*anonymous* = anonymous login*no* = no login",
+    "SLX_ROOT_PASS": "The root password of the basic system. Only required for diagnostic purposes on the client.Leave field blank to disallow root logins.\/Hint\/: The password is encrypted with $6$ hash, so it is no longer readable after saving!",
+    "SLX_SHUTDOWN_SCHEDULE": "Fixed time to turn off the computer, even if there is a user active.Several times can be specified, separated by spaces.",
+    "SLX_SHUTDOWN_TIMEOUT": "Time in seconds after which a computer is switched off, if no user is logged on.Leave blank to disable the function."
 }
