--- a/lang/pt/templates/main-menu.json
+++ b/lang/pt/templates/main-menu.json
@@ -7,6 +7,7 @@
     "lang_language": "L\u00edngua",
     "lang_localization": "Localiza\u00e7\u00e3o",
     "lang_login": "Entrar",
+    "lang_logout": "Sair",
     "lang_news": "Novidades",
     "lang_server": "Servidor",
     "lang_settings": "Op\u00e7\u00f5es",
