--- a/lang/pt/templates/main-menu.json
+++ b/lang/pt/templates/main-menu.json
@@ -4,12 +4,15 @@
     "lang_clientLog": "Log dos Clientes",
     "lang_configurationBasic": "Comfigura\u00e7\u00e3o B\u00e1sica",
     "lang_configurationVariables": "Vari\u00e1veis de Configura\u00e7\u00e3o",
+    "lang_eventLog": "Log dos Serveros",
     "lang_language": "L\u00edngua",
     "lang_localization": "Localiza\u00e7\u00e3o",
     "lang_login": "Entrar",
     "lang_logout": "Sair",
     "lang_news": "Novidades",
     "lang_server": "Servidor",
+    "lang_serverStatus": "Server status",
     "lang_settings": "Op\u00e7\u00f5es",
+    "lang_status": "Status",
     "lang_vmLocation": "Localiza\u00e7\u00e3o da VM"
 }
