--- a/lang/de/messages-hardcoded.json
+++ b/lang/de/messages-hardcoded.json
@@ -16,5 +16,8 @@
     "lang_moduleAdd": "Modul hinzuf\u00fcgen",
     "lang_serverConfiguration": "Serverseitige Konfiguration",
     "lang_specificLogo": "Einrichtungsspezifisches Logo",
-    "lang_unknwonTaskManager": "Unbekannter Taskmanager-Fehler"
+    "lang_titleEventLog": "Ereignisprotokoll",
+    "lang_unknwonTaskManager": "Unbekannter Taskmanager-Fehler",
+    "today": "Heute",
+    "yesterday": "Gestern"
 }
