--- a/lang/en/messages-hardcoded.json
+++ b/lang/en/messages-hardcoded.json
@@ -16,5 +16,8 @@
     "lang_moduleAdd": "Add Module",
     "lang_serverConfiguration": "Server-side Configuration",
     "lang_specificLogo": "Institution Specific Logo",
-    "lang_unknwonTaskManager": "Unknown Task Manager error"
+    "lang_titleEventLog": "Event log",
+    "lang_unknwonTaskManager": "Unknown Task Manager error",
+    "today": "Today",
+    "yesterday": "Yesterday"
 }
