Show notice in menu bar if setup is incomplete

--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -9,6 +9,7 @@
     "lang_localization": "Lokalisierung",
     "lang_login": "Anmelden",
     "lang_logout": "Abmelden",
+    "lang_needsSetup": "Einrichtung unvollst\u00e4ndig",
     "lang_news": "News",
     "lang_server": "Server",
     "lang_serverStatus": "Server Status",
