--- a/lang/de/messages-hardcoded.json
+++ b/lang/de/messages-hardcoded.json
@@ -16,6 +16,7 @@
     "lang_moduleAdd": "Modul hinzuf\u00fcgen",
     "lang_serverConfiguration": "Serverseitige Konfiguration",
     "lang_specificLogo": "Einrichtungsspezifisches Logo",
+    "lang_titleBackup": "Sichern und Wiederherstellen",
     "lang_titleEventLog": "Ereignisprotokoll",
     "lang_unknwonTaskManager": "Unbekannter Taskmanager-Fehler",
     "today": "Heute",
