--- a/lang/de/settings/cat_setting.json
+++ b/lang/de/settings/cat_setting.json
@@ -1,8 +1,8 @@
 {
-    "cat_0": "Unkategorisiert",
     "cat_1": "Inaktivit\u00e4t und Abschaltung",
     "cat_2": "Internetzugriff",
     "cat_3": "Zeitsynchronisation",
     "cat_4": "Grundsystem",
-    "cat_5": "Gemeinsames Netzlaufwerk"
+    "cat_5": "Gemeinsames Netzlaufwerk",
+    "cat_6": "Unkategorisiert"
 }
