--- a/lang/de/templates/sysconfig/ad-start.json
+++ b/lang/de/templates/sysconfig/ad-start.json
@@ -5,6 +5,7 @@
     "lang_adText4": "Nach Eingabe aller ben\u00f6tigten Daten wird im n\u00e4chsten Schritt \u00fcberpr\u00fcft, ob die Kommunikation mit dem AD m\u00f6glich ist.",
     "lang_bindDN": "Bind DN",
     "lang_close": "Schlie\u00dfen",
+    "lang_moduleTitle": "Titel",
     "lang_next": "Weiter",
     "lang_password": "Passwort",
     "lang_searchBase": "Suchbasis",
