--- a/lang/en/messages-hardcoded.json
+++ b/lang/en/messages-hardcoded.json
@@ -16,6 +16,7 @@
     "lang_moduleAdd": "Add Module",
     "lang_serverConfiguration": "Server-side Configuration",
     "lang_specificLogo": "Institution Specific Logo",
+    "lang_titleBackup": "Save and Restore",
     "lang_titleEventLog": "Event log",
     "lang_unknwonTaskManager": "Unknown Task Manager error",
     "today": "Today",
