--- a/lang/en/templates/main-menu.json
+++ b/lang/en/templates/main-menu.json
@@ -1,5 +1,6 @@
 {
     "lang_administration": "Translations",
+    "lang_backup": "Backup\/Restore",
     "lang_client": "Client",
     "lang_clientLog": "Client Log",
     "lang_configurationBasic": "Basic Configuration",
