--- a/lang/en/templates/sysconfig/ad-start.json
+++ b/lang/en/templates/sysconfig/ad-start.json
@@ -5,6 +5,7 @@
     "lang_adText4": "After entering all required data in the next step, it checks whether communication is possible with the AD.",
     "lang_bindDN": "Bind DN",
     "lang_close": "Close",
+    "lang_moduleTitle": "Title",
     "lang_next": "Next",
     "lang_password": "Password",
     "lang_searchBase": "Search Base",
