--- a/lang/en/settings/cat_setting.json
+++ b/lang/en/settings/cat_setting.json
@@ -1,8 +1,8 @@
 {
-    "cat_0": "Uncategorized",
     "cat_1": "Inactivity and Shutdown",
     "cat_2": "Internet Access",
     "cat_3": "Time Synchronization",
     "cat_4": "Basic System",
-    "cat_5": "Common network share"
+    "cat_5": "Common network share",
+    "cat_6": "Uncategorized"
 }
