Added proxy server settings

--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -6,6 +6,7 @@
     "lang_configurationBasic": "Grundkonfiguration",
     "lang_configurationVariables": "KonfigurationsVariablen",
     "lang_eventLog": "Server Log",
+    "lang_internetAccess": "Internetzugriff",
     "lang_language": "Sprachen",
     "lang_localization": "Lokalisierung",
     "lang_login": "Anmelden",
