--- a/lang/en/templates/main-menu.json
+++ b/lang/en/templates/main-menu.json
@@ -6,6 +6,7 @@
     "lang_configurationBasic": "Basic Configuration",
     "lang_configurationVariables": "Configuration Variables",
     "lang_eventLog": "Server Log",
+    "lang_internetAccess": "Internet access",
     "lang_language": "Language",
     "lang_localization": "Localization",
     "lang_login": "Login",
