--- a/lang/en/templates/page-news.json
+++ b/lang/en/templates/page-news.json
@@ -1,8 +1,8 @@
 {
-    "lang_activeNews": "Active News",
     "lang_content": "Content",
     "lang_date": "Date",
     "lang_delete": "Delete",
+    "lang_editNews": "Edit news",
     "lang_latestUpdate": "Latest update",
     "lang_newsIntro": "Here you have the possibility to edit the news displayed to the bwLehrpool clients.",
     "lang_newsOld": "Old News",
