--- a/lang/en/templates/serversetup/ipxe.json
+++ b/lang/en/templates/serversetup/ipxe.json
@@ -4,12 +4,15 @@
     "lang_bootMenu": "Boot Menu",
     "lang_bootMenuCreate": "Create Boot Menu",
     "lang_close": "Close",
+    "lang_customEntry": "Custom entry",
     "lang_example": "Example",
     "lang_localHDD": "Local HDD",
+    "lang_masterPassword": "Master password",
+    "lang_masterPasswordHelp": "The master password is required to edit a boot menu entry. This should be set for security reasons.",
     "lang_menuCustom": "Custom Extra Menu",
     "lang_menuCustomHint1": "Here you have the opportunity to add your own menu code to the displayed PXE menu, eg to refer to other PXE server. The format corresponds to the syslinux menu format.",
     "lang_menuCustomHint2": "You can create one or more entries. If you want to create an entry that starts automatically when the user makes a selection, assign as",
-    "lang_menuCustomHint3": "and select as the default boot behavior my-entry as well.",
+    "lang_menuCustomHint3": "and select as the default boot behavior custom as well.",
     "lang_menuDisplayTime": "Menu Display Time",
     "lang_seconds": "Seconds"
 }
