--- a/lang/pt/templates/main-menu.json
+++ b/lang/pt/templates/main-menu.json
@@ -1,5 +1,4 @@
 {
-    "lang_administration": "Tradu\u00e7\u00f5es",
     "lang_client": "Cliente",
     "lang_clientLog": "Log dos Clientes",
     "lang_configurationBasic": "Comfigura\u00e7\u00e3o B\u00e1sica",
@@ -14,5 +13,6 @@
     "lang_serverStatus": "Server status",
     "lang_settings": "Op\u00e7\u00f5es",
     "lang_status": "Status",
+    "lang_translations": "Tradu\u00e7\u00f5es",
     "lang_vmLocation": "Localiza\u00e7\u00e3o da VM"
 }
