Add link to https config to menu

--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -18,5 +18,6 @@
     "lang_status": "Status",
     "lang_translations": "\u00dcbersetzungen",
     "lang_vmLocation": "VM Speicherort",
-    "lang_warning": "Warnung"
+    "lang_warning": "Warnung",
+    "lang_webInterface": "Web-Schnittstelle"
 }
