Wait for reboot to complete after restoring a configuration backup

--- a/lang/de/templates/backup/restore.json
+++ b/lang/de/templates/backup/restore.json
@@ -3,5 +3,6 @@
     "lang_reboot": "Systemneustart",
     "lang_restoreConfig": "Konfiguration wiederherstellen",
     "lang_restoreFailed": "Wiederherstellung der Konfiguration fehlgeschlagen.",
-    "lang_stopping": "Stoppe"
+    "lang_stopping": "Stoppe",
+    "lang_waitReboot": "Warte auf Reboot."
 }
