--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -35,6 +35,7 @@
     "reboot-unconfirmed": "Sicherheitsabfrage zum Reboot nicht best\u00e4tigt",
     "remote-parse-failed": "Parsen der empfangenen Daten fehlgeschlagen ({{0}})",
     "remote-timeout": "Konnte Ressource {{0}} nicht herunterladen ({{1}})",
+    "restore-done": "Wiederherstellung abgeschlossen",
     "settings-updated": "Einstellungen wurden aktualisiert",
     "task-error": "Ausf\u00fchrung fehlgeschlagen: {{0}}",
     "taskmanager-error": "Verbindung zum Taskmanager fehlgeschlagen",
