--- a/lang/en/templates/minilinux/filelist.json
+++ b/lang/en/templates/minilinux/filelist.json
@@ -4,6 +4,7 @@
     "lang_canUpdate2": "can be updated. For a smooth operation, it is recommended to keep all components up to date.",
     "lang_configurationPackageNotFound": "Configuration package not found!",
     "lang_outdated": "Outdated",
+    "lang_redownload": "Download again",
     "lang_systemUpdated": "The system is up to date.",
     "lang_update": "Update"
 }
