Rework config module class structure. Still some TODOs though....

--- a/lang/de/messages-hardcoded.json
+++ b/lang/de/messages-hardcoded.json
@@ -1,16 +1,11 @@
 {
     "lang_adAuthentication": "Active Directory Authentifizierung",
-    "lang_adModule": "Mit diesem Modul ist die Anmeldung an den Client PCs mit den Benutzerkonten eines Active Directory m\u00f6glich. Je nach Konfiguration ist auch die Nutzung eines Benutzerverzeichnisses auf dem Client m\u00f6glich.",
     "lang_addCustomModule": "Generisches Modul hinzuf\u00fcgen",
-    "lang_addCustomModuleInfo": "Mit einem Erweiterten Modul ist es m\u00f6glich, beliebige Dateien zum Grundsystem hinzuzuf\u00fcgen Nutzen Sie dieses Modul, um z.B. spezielle Konfigurationsdateien auf den Client PCs zu verwenden, die sich nicht mit einem der anderen Wizards erstellen l\u00e4sst. Das Hinzuf\u00fcgen eines Erweiterten Moduls erfordert in der Regel zumindest grundlegende Systemkenntnisse im Linuxbereich.",
-    "lang_authentication": "Authentifizierung",
     "lang_configurationCompilation": "Konfiguration zusammenstellen",
     "lang_contentOf": "Inhalt von \u0022",
     "lang_createUser": "Benutzer anlegen",
     "lang_days": "Tag(e)",
-    "lang_generic": "Generisch",
     "lang_hours": "Stunde(n)",
-    "lang_institutionLogo": "Logo der Einrichtung",
     "lang_location": "Lokalisierung",
     "lang_login": "Anmelden",
     "lang_moduleAdd": "Modul hinzuf\u00fcgen",
@@ -18,6 +13,7 @@
     "lang_specificLogo": "Einrichtungsspezifisches Logo",
     "lang_titleBackup": "Sichern und Wiederherstellen",
     "lang_titleEventLog": "Ereignisprotokoll",
+    "lang_titleWebinterface": "Webschnittstelle",
     "lang_unknwonTaskManager": "Unbekannter Taskmanager-Fehler",
     "today": "Heute",
     "yesterday": "Gestern"
