--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -1,4 +1,5 @@
 {
+    "ad-config-failed": "Wiederherstellen der Active Directory Konfiguration fehlgeschlagen",
     "adduser-disabled": "Keine ausreichenden Rechte, um weitere Benutzer hinzuzuf\u00fcgen",
     "adduser-success": "Benutzer erfolgreich hinzugef\u00fcgt",
     "backup-failed": "Sicherung fehlgeschlagen!",
@@ -24,9 +25,13 @@
     "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
     "loginfail": "Benutzername oder Kennwort falsch",
     "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
+    "missing-title": "Kein Titel eingegeben",
     "module-added": "Modul erfolgreich hinzugef\u00fcgt",
     "module-deleted": "Modul {{0}} wurde gel\u00f6scht",
     "module-in-use": "Modul {{0}} wird noch durch Konfiguration {{1}} verwendet",
+    "module-rebuild-failed": "Neubau des Moduls fehlgeschlagen",
+    "module-rebuilding": "Modul wird neu generiert",
+    "module-rebuilt": "Modul wurde neu generiert",
     "news-del-success": "News gel\u00f6scht",
     "news-empty": "Es wurde keine News in der Datenbank gefunden",
     "news-save-success": "News erfolgreich aktualisiert",
