--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -7,7 +7,7 @@
     "lang_eventLog": "Server Log",
     "lang_internetAccess": "Internetzugriff",
     "lang_language": "Sprachen",
-    "lang_localization": "Lokalisierung",
+    "lang_localization": "Lokalisierung + Integration",
     "lang_login": "Anmelden",
     "lang_logout": "Abmelden",
     "lang_needsSetup": "Einrichtung unvollst\u00e4ndig",
