--- a/lang/de/templates/webinterface/passwords.json
+++ b/lang/de/templates/webinterface/passwords.json
@@ -1,5 +1,5 @@
 {
-    "lang_description": "Legen Sie fest, ob Passwortfelder in der Web-Schnittstelle maskiert sein sollen, oder ob Ihr Inhalt sichtbar sein soll. Wenn Sie die Schnittstelle in einer sicheren Umgebung nutzen (keine neugierigen Augen), kann dies den Komfort erh\u00f6hen. Das Passwortfeld der Anmeldemaske ist von dieser Einstellung ausgenommen.",
+    "lang_description": "Legen Sie fest, ob Passwortfelder in der Web-Schnittstelle maskiert werden, oder ob Ihr Inhalt sichtbar sein soll. Wenn Sie die Schnittstelle in einer sicheren Umgebung nutzen (keine neugierigen Augen), kann dies den Komfort erh\u00f6hen. Das Passwortfeld der Anmeldemaske ist von dieser Einstellung ausgenommen.",
     "lang_hidePasswords": "Passw\u00f6rter maskieren",
     "lang_passwordFields": "Passwortfelder",
     "lang_save": "Speichern",
