--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -1,4 +1,5 @@
 {
+    "ad-config-failed": "Rebuilding the Active Directory configuration failed",
     "adduser-disabled": "Insufficient privileges to add more users",
     "adduser-success": "User successfully added",
     "backup-failed": "Backup failed!",
@@ -24,9 +25,13 @@
     "invalid-template": "Selected template is not valid",
     "loginfail": "Username or Password incorrect",
     "missing-file": "There was no file selected!",
+    "missing-title": "No title given",
     "module-added": "Module successfully added",
     "module-deleted": "Module {{0}} was deleted",
     "module-in-use": "Module {{0}} is still used by Configuration {{1}}",
+    "module-rebuild-failed": "Rebuilding module failed",
+    "module-rebuilding": "Module is rebuilding...",
+    "module-rebuilt": "Module was rebuilt",
     "news-del-success": "News deleted",
     "news-empty": "There was no news found in the database",
     "news-save-success": "News updated successfully",
