--- a/lang/de/templates/sysconfig/branding-start.json
+++ b/lang/de/templates/sysconfig/branding-start.json
@@ -1,5 +1,5 @@
 {
-    "lang_branding": "F\u00fcr beste Ergebnisse sollten Sie ihr Einrichtungslogo im SVG Format hochladen. Das SVG-Format ist ein Vektorgrafikformat, was zum Skalieren vorteilhaft ist. Eine Gute Quelle f\u00fcr SVG-Logos von Unis und Hochschulen ist ihr jeweiliger Wikipedia-Artikel.",
+    "lang_branding": "Hier k\u00f6nnen Sie ihr Einrichtungslogo im SVG Format hochladen. Das SVG-Format ist ein Vektorgrafikformat, was zum Skalieren vorteilhaft ist. Eine Gute Quelle f\u00fcr SVG-Logos von Unis und Hochschulen ist ihr jeweiliger Wikipedia-Artikel.",
     "lang_computerLoad": "Bild von lokalem Rechner hochladen",
     "lang_or": "oder",
     "lang_upload": "Hochladen",
