--- a/lang/en/templates/sysconfig/_page.json
+++ b/lang/en/templates/sysconfig/_page.json
@@ -6,11 +6,13 @@
     "lang_close": "Close",
     "lang_configurationModuleNotFound": "Configuration module not found!",
     "lang_delete": "Delete",
+    "lang_download": "Download",
     "lang_helpModuleConfiguration": "Configuration modules are the building blocks from which a system configuration is created. Here you can create both generic modules by a wizard, as well as create completely custom modules (advanced Linux knowledge required).",
     "lang_helpSystemConfiguration": "The fundamental localization of the bwLehrpool system is done through a system configuration. These include aspects such as the authentication method for users (eg Active Directory, LDAP), printer configuration, home directories, etc. A system configuration is composed of one or more configuration modules, which can be managed at the bottom of this page.",
     "lang_moduleConfiguration": "Module Configuration",
     "lang_newConfiguration": "New Configuration",
     "lang_newModule": "New Module",
+    "lang_rebuild": "Rebuild",
     "lang_show": "Show",
     "lang_systemConfiguration": "System Configuration",
     "lang_systemConfigurationAlert": "Before you can create a system configuration, you must first create a configuration module.",
