--- a/lang/en/templates/sysconfig/cfg-start.json
+++ b/lang/en/templates/sysconfig/cfg-start.json
@@ -2,6 +2,6 @@
     "lang_configuration": "Configuration",
     "lang_configurationChoose": "Please select which modules will be used for this configuration.",
     "lang_name": "Name",
-    "lang_new": "New",
-    "lang_next": "Next"
+    "lang_next": "Next",
+    "lang_noModuleOfType": "No module of this type found."
 }
