--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -28,6 +28,7 @@
     "missing-title": "Kein Titel eingegeben",
     "module-added": "Modul erfolgreich hinzugef\u00fcgt",
     "module-deleted": "Modul {{0}} wurde gel\u00f6scht",
+    "module-edited": "Modul wurde aktualisiert",
     "module-in-use": "Modul {{0}} wird noch durch Konfiguration {{1}} verwendet",
     "module-rebuild-failed": "Neubau des Moduls fehlgeschlagen",
     "module-rebuilding": "Modul wird neu generiert",
